--- a/praticas/pratica02/package.json
+++ b/praticas/pratica02/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pratica02",
-  "version": "1.0.0",
+  "name": "praticaboademais",
+  "version": "5.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
